2003-07-17  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-stream-fs.c (stream_read): Increment the seekable stream
	position by the number of bytes read. Oops.
	(stream_write): Same here.

2003-07-17  Timo Sirainen <tss@iki.fi>

	** See bug #42573
	
	* providers/imap/camel-imap-folder.c (do_append): Only free the
	response after we have finished the literal request, otherwise we
	could try processing folder updates incorrectly.

2003-07-14  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-utils.h: Add the CamelMimePartEncodingType definition
	here.

	* camel-mime-part.h: Remove the CamelMimePartEncodingType
	definition.

	* camel-mime-part-utils.c
	(simple_data_wrapper_construct_from_parser): Don't do any of the
	auto-detection we used to do here anymore. Just read the content
	into a memory buffer and record the encoding type.
	(camel_mime_part_construct_content_from_parser): Don't mangle the
	Content-Type struct here anymore.

	* camel-data-wrapper.c (camel_data_wrapper_init): Init encoding to
	DEFAULT.
	(write_to_stream): If the stream needs to be decoded, decode it.

2003-07-15  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-stream-fs.c (stream_read): If we read 0 bytes, then set
	eos to TRUE.

2003-07-09  Jeffrey Stedfast  <fejj@ximian.com>

	Get rid of the #ifdef ENABLE_THREADS since we no longer plan to
	support/maintain this.

	* providers/nntp/camel-nntp-store.c: Here.

	* providers/nntp/camel-nntp-newsrc.c: And here.

	* providers/nntp/camel-nntp-folder.c: Same.

	* providers/local/camel-local-folder.c: And here.

	* camel-block-file.c: Here too.

	* camel.c: Same.

	* camel-certdb.c: Here too.

	* camel-charset-map.c: And here.

	* camel-cipher-context.c: "

	* camel-data-wrapper.c: "

	* camel-digest-folder.c: "

	* camel-exception.c: "

	* camel-folder.c: "

	* camel-folder-summary.c: "

	* camel-lock-client.c: "

	* camel-mime-utils.c: "

	* camel-object.c: "

	* camel-operation.c: "

	* camel-partition-table.c: "

	* camel-sasl-popb4smtp.c: "
